tests/files/parser_tests/should_fail/101.cmdr
//Should not parse incorrect type format
type one = "one";